@@ -74,6 +74,25 @@ data.  Thread identifiers may be recycled when a thread exits and
 another thread is created.
 \end{funcdesc}
 
+\begin{funcdesc}{stack_size}{\optional{size}}
+Return the thread stack size used when creating new threads.  The
+optional \var{size} argument specifies the stack size to be used for
+subsequently created threads, and must be 0 (use platform or
+configured default) or a positive integer value of at least 32,768 (32kB).
+If changing the thread stack size is unsupported, or the specified size
+is invalid, a RuntimeWarning is issued and the stack size is unmodified.
+32kB is currently the minimum supported stack size value, to guarantee
+sufficient stack space for the interpreter itself.
+Note that some platforms may have particular restrictions on values for
+the stack size, such as requiring allocation in multiples of the system
+memory page size - platform documentation should be referred to for more
+information (4kB pages are common; using multiples of 4096 for the
+stack size is the suggested approach in the absence of more specific
+information).
+Availability: Windows, systems with \POSIX{} threads.
+\versionadded{2.5}
+\end{funcdesc}
+
 
 Lock objects have the following methods:
 
